--- a/index.html
+++ b/index.html
@@ -4,27 +4,35 @@
     <title>Flat Earth Twitter Bigram Viz</title>
     <style>
         .links{
+            padding:10px 15px;
             transition-property: transform;
             transition-duration: .13s;
             transition-timing-function: ease-out;
+
         }
         .links:hover {
             transform:scale(1.1);
         }
+        @media (max-width: 1369px) {
+            .links{
+                padding:50px 50px;
+            }
+          }
+          
     </style>
 </head>
 <body style="font-family: Arial, sans-serif; display:flex;flex-wrap:wrap;width:90vw;justify-content:center;line-height:1.5;color:black;">
     <div style="display:flex;flex-wrap:wrap;width:70vw;text-align:center;justify-content:space-around;align-items:center;margin:10px 0 30px 0;">
         <h3 style="width:100%">Other links</h3>
-        <a class="links" href="https://zackfair1.github.io/tg_channels_out/" target="_blank" style="width:25%;padding:10px 15px;text-decoration:none;margin:15px;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Telegram Channel Graph<br>(Out Degree Network)</a>
-        <a class="links" href="https://zackfair1.github.io/tg_channels_in/" target="_blank" style="width:25%;padding:10px 15px ;color:black;margin:15px;font-size:0.9em;text-decoration:none;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Telegram Channel Graph<br>(In Degree Network)</a>
-        <a class="links" href="https://zackfair1.github.io/tg_channels_bc/" target="_blank" style="width:25%;padding:10px 15px ;margin:15px;text-decoration:none;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Telegram Channel Graph<br>(Betweenness Centrality Network)</a>
-        <a class="links" href="https://zackfair1.github.io/ego_fe/" target="_blank" style="width:25%;padding:10px 15px ;text-decoration:none;margin:15px;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Telegram Channel Graph<br>(Flat Earth Egocentric Network)</a>
-        <a class="links" href="https://zackemcee.github.io/tweets_topics_chord/" target="_blank" style="width:25%;padding:10px 15px ;text-decoration:none;margin:15px;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Telegram Channel Graph<br>(Communities Category Network)</a>
-        <a class="links" href="https://fe-tweets.herokuapp.com/" target="_blank" style="width:25%;padding:10px 15px ;text-decoration:none;margin:15px;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Twitter Analysis by Date and Likes<br>(Tweets Text and Date Distribution)</a>
-        <a class="links" href="https://zackfair1.github.io/lda_flat_topic/" target="_blank" style="width:25%;padding:10px 15px ;margin:15px;text-decoration:none;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Twitter Analysis<br>(LDA Topics Analysis)</a>
-        <a class="links" href="https://projector.tensorflow.org/?config=https://raw.githubusercontent.com/zackfair1/w2v_fe/main/config.json" target="_blank" style="width:25%;padding:10px 15px ;margin:15px;text-decoration:none;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Twitter Text Analysis<br>(Word Embeddings Projector)</a>
-        <a class="links" href="https://projector.tensorflow.org/?config=https://raw.githubusercontent.com/zackfair1/images_rep/main/config.json" target="_blank" style="width:25%;padding:10px 15px ;margin:15px;text-decoration:none;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Twitter Image Analysis<br>(Image Embeddings Projector)</a>
+        <a class="links" href="https://zackfair1.github.io/tg_channels_out/" target="_blank" style="width:25%;text-decoration:none;margin:15px;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Telegram Channel Graph<br>(Out Degree Network)</a>
+        <a class="links" href="https://zackfair1.github.io/tg_channels_in/" target="_blank" style="width:25%;color:black;margin:15px;font-size:0.9em;text-decoration:none;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Telegram Channel Graph<br>(In Degree Network)</a>
+        <a class="links" href="https://zackfair1.github.io/tg_channels_bc/" target="_blank" style="width:25% ;margin:15px;text-decoration:none;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Telegram Channel Graph<br>(Betweenness Centrality Network)</a>
+        <a class="links" href="https://zackfair1.github.io/ego_fe/" target="_blank" style="width:25% ;text-decoration:none;margin:15px;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Telegram Channel Graph<br>(Flat Earth Egocentric Network)</a>
+        <a class="links" href="https://zackemcee.github.io/tweets_topics_chord/" target="_blank" style="width:25% ;text-decoration:none;margin:15px;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Telegram Channel Graph<br>(Communities Category Network)</a>
+        <a class="links" href="https://fe-tweets.herokuapp.com/" target="_blank" style="width:25% ;text-decoration:none;margin:15px;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Twitter Analysis by Date and Likes<br>(Tweets Text and Date Distribution)</a>
+        <a class="links" href="https://zackfair1.github.io/lda_flat_topic/" target="_blank" style="width:25%;margin:15px;text-decoration:none;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Twitter Analysis<br>(LDA Topics Analysis)</a>
+        <a class="links" href="https://projector.tensorflow.org/?config=https://raw.githubusercontent.com/zackfair1/w2v_fe/main/config.json" target="_blank" style="width:25%;margin:15px;text-decoration:none;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Twitter Textual Analysis<br>(Word Embeddings Projector)</a>
+        <a class="links" href="https://projector.tensorflow.org/?config=https://raw.githubusercontent.com/zackfair1/images_rep/main/config.json" target="_blank" style="width:25%;margin:15px;text-decoration:none;font-size:0.9em;color:black;font-weight:bold;background-color:#E5ECF6;height:35px;display:flex;align-items:center;justify-content:center;box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;">Twitter Image Analysis<br>(Image Embeddings Projector)</a>
     </div>
     <div style="box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;margin-bottom:100px;padding:0 15px 75px 15px">                        
         <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
